# dockerdeps

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  dockerdeps.cc  dockerdeps.h
tests/: Makefile.am  usage.sh
